--- a/work_in_progress/PPD/Marco.lyx
+++ b/work_in_progress/PPD/Marco.lyx
@@ -567,7 +567,7 @@ y and the quality of the developed software.
  This approach provides a dimensionless parameter to evaluate the functionalitie
 s provided by the software.
  The Function Point reduces the abstraction of the product, giving concrete
- datas to evalute the prooject.
+ datas to evalute the project.
  The tables below...
 \end_layout
 
