--- a/work_in_progress/PPD/PPD_version_1.lyx
+++ b/work_in_progress/PPD/PPD_version_1.lyx
@@ -532,7 +532,7 @@ Model Definition Manual by COCOMO II;
 
 \begin_layout Itemize
 \begin_inset Flex URL
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -641,7 +641,7 @@ s of the software.
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -889,7 +889,7 @@ EI values table.
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -1137,7 +1137,7 @@ EO/EQ values table.
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -1385,7 +1385,7 @@ ILF/ELF values table.
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -4371,7 +4371,7 @@ Scale Factors
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset ERT
@@ -10125,7 +10125,7 @@ Hours of work
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset ERT
@@ -10452,15 +10452,17 @@ begin{adjustwidth}{-0.6cm}{}
 \align center
 \begin_inset Tabular
 <lyxtabular version="3" rows="19" columns="3">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top" width="9cm">
+<features booktabs="true" tabularvalignment="middle">
+<column alignment="left" valignment="top" width="9cm">
 <column alignment="center" valignment="top" width="3cm">
 <column alignment="center" valignment="top" width="3cm">
 <row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Cost Driver
 \end_layout
 
@@ -10470,6 +10472,8 @@ Cost Driver
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Factor
 \end_layout
 
@@ -10479,6 +10483,8 @@ Factor
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Value
 \end_layout
 
@@ -10486,10 +10492,12 @@ Value
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Required Software Reliability (RELY) 
 \end_layout
 
@@ -10515,10 +10523,12 @@ High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Data Base Size (DATA) 
 \end_layout
 
@@ -10544,10 +10554,12 @@ Very High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Product Complexity (CPLX) 
 \end_layout
 
@@ -10573,10 +10585,12 @@ High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Developed for Reusability (RUSE)
 \end_layout
 
@@ -10602,10 +10616,12 @@ Nominal
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Documentation Match to Life-Cycle Needs (DOCU) 
 \end_layout
 
@@ -10631,10 +10647,12 @@ Nominal
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Execution Time Constraint (TIME)
 \end_layout
 
@@ -10660,10 +10678,12 @@ High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Main Storge Constraint (STOR)
 \end_layout
 
@@ -10689,10 +10709,12 @@ High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Platform Volatility (PVOL)
 \end_layout
 
@@ -10718,10 +10740,12 @@ Low
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Analyst Capability (ACAP)
 \end_layout
 
@@ -10747,10 +10771,12 @@ High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Programmer Capability (PCAP)
 \end_layout
 
@@ -10776,10 +10802,12 @@ High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Personnel Continuity(PCON)
 \end_layout
 
@@ -10805,10 +10833,12 @@ Low
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Applications Experience (APEX)
 \end_layout
 
@@ -10834,10 +10864,12 @@ Low
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Pltform Experience (PLEX)
 \end_layout
 
@@ -10863,10 +10895,12 @@ Nominal
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Language and Tool Experience (LTEX)
 \end_layout
 
@@ -10892,10 +10926,12 @@ Low
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Use of Software Tools(TOOL)
 \end_layout
 
@@ -10921,10 +10957,12 @@ Very High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Multisite Development (SITE)
 \end_layout
 
@@ -10950,10 +10988,12 @@ Extra High
 </cell>
 </row>
 <row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Required Development Schedule (SCED)
 \end_layout
 
@@ -10979,10 +11019,12 @@ Nominal
 </cell>
 </row>
 <row>
-<cell multicolumn="1" alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+<cell multicolumn="1" alignment="left" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\series bold
 Total
 \end_layout
 
@@ -11001,7 +11043,7 @@ Total
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+1.23175
 \end_layout
 
 \end_inset
@@ -11242,7 +11284,78 @@ So in this section we’re going to provide a general, high-level schedule
  However, according to the previous analysis that we have made in that document
  we have tried to do these schedule as more realistica s possible.
  We have hypothesized that the whole realization of the project covering
- a period from TODO September to TODO … 
+ a period from October 2016 to November 2017.
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=1cm, bottom=2cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename Gantt/GeneralGantt.pdf
+	scale 57
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+General Gantt diagram.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -11288,6 +11401,143 @@ So in this section we’re going to provide a general overview of how the
 \end_layout
 
 \begin_layout Standard
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=1cm, bottom=2cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename Gantt/GuidoGantt.pdf
+	scale 57
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Muscioni Guido Gantt diagram.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename Gantt/MarcoGantt.pdf
+	scale 57
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Orbelli Marco Gantt diagram.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename Gantt/PaolaGantt.pdf
+	scale 57
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Marchesini Paola Gantt diagram.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \begin_inset Newpage newpage
 \end_inset
 
@@ -11306,6 +11556,311 @@ name "risk"
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+Risk management is a key phase of our project.
+\end_layout
+
+\begin_layout Standard
+So the developers, and all other people that work on the project, can have
+ a complete view of the risks that may affect the system.
+ We assume that a risk is a potential problem, which might or not might
+ happen, that can result in a technical malfunction or human difficulties.
+\end_layout
+
+\begin_layout Standard
+In the section presented above there are all the risks that we have indentified
+ during the building of this and all the previous documents.
+\end_layout
+
+\begin_layout Subsection
+Project Risks
+\end_layout
+
+\begin_layout Standard
+In this section there are all the risks that threaten the project plan.
+ That kind of problems can flow into an unexpected extension of the schedule
+ define in section 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:schedule"
+
+\end_inset
+
+, and clearly in a cost increasing.
+\end_layout
+
+\begin_layout Paragraph*
+Personnel shortfall
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk emerge from the loss of one or more members of the project team.
+\end_layout
+
+\begin_layout Standard
+As we know from the start that a problem like that could happen in every
+ moments; we always work as a strong and cooperative team, as we mentioned
+ in the cost drivers of COCOMO II.
+ So that the remaining people in the team can easely substitute the missing
+ members.
+ Obviously the schedule will slip, but will not exceed the upper bound TDEV
+ defined in section 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:size and cost"
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Paragraph*
+Unrealistic schedules
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk involves errors during the schedule phase of the project.
+ In particular, it can emerge from a strict deadline from the stakeholders.
+\end_layout
+
+\begin_layout Standard
+We have tried to take that risk into account by make a more flexible time
+ schedule estimation.
+ In actual fact the variace between the lower and the upper bound of schedule,
+ defined trough COCOMO II, is high.
+\end_layout
+
+\begin_layout Subsection
+Technical Risks
+\end_layout
+
+\begin_layout Paragraph*
+Inexperience team members
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk emerges during the developing phase of the project.
+ It can be produced by two main reasons:
+\end_layout
+
+\begin_layout Itemize
+The lack of specialized skills required in order to achieve the final version
+ of the system;
+\end_layout
+
+\begin_layout Itemize
+An overstimation of the knowledge of one or more team members.
+\end_layout
+
+\begin_layout Standard
+We have already taken that problem into account during the cost and effort
+ analysis.
+ The parameters that deal with what we have mentioned in this paragraph
+ have been understimated.
+ So that the schedule of the project will not change due to this risk, it
+ will remain in the range of time that we have already defined.
+ 
+\end_layout
+
+\begin_layout Standard
+In addiction, we have always used tools and languages that we have already
+ known from our university studies, so that risk is well coverage.
+\end_layout
+
+\begin_layout Paragraph*
+Bad external components
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk emerges from the use of external components that have not been
+ developed well.
+ 
+\end_layout
+
+\begin_layout Standard
+During the building of that project we have always selected well known system.
+ So that the probability that a problem occur in that case is remote.
+ Moreover the external systems used in our project are develop by multinational
+ companies that can resolve that kind of problems in a very efficient way.
+\end_layout
+
+\begin_layout Paragraph*
+Real-Time performance shortfalls
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset label
+LatexCommand label
+name "par:server farm"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk emerges when the system is realesed in the world.
+\end_layout
+
+\begin_layout Standard
+Firstly, we have made a very efficient test plan document, that can cover
+ all the main functionalities of the system.
+ 
+\end_layout
+
+\begin_layout Standard
+Secondly if a problem like that occurs, and result in a malfunctioning in
+ a server of our arrchitecture; the two servers farms designed will make
+ that problem not recognizable by the users.
+ In actual fact, as it was mentioned in the DD document if a server goes
+ down the other can replace all the functionalities of the missing one.
+\end_layout
+
+\begin_layout Paragraph*
+Hacker attack
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk emerges from smeone that tries to access to our system without
+ permission.
+\end_layout
+
+\begin_layout Standard
+The solution of that risk is already written in the previous paragraph:
+ 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "par:server farm"
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Paragraph*
+Wrong user interface
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That problem can emerge from a malfunctioning or a wrong design in the user
+ interface.
+\end_layout
+
+\begin_layout Standard
+Even if we have designed it properly, if an error occurs, thank to the use
+ of Phonegap, the bug fix must be done only in one code.
+ The reason of that solution is well explained in the previous documents.
+\end_layout
+
+\begin_layout Subsection
+Business Risks
+\end_layout
+
+\begin_layout Standard
+
+\series bold
+Gold plating
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+We have decided to put that risk in the business risks section even if it
+ also deals with the possible technical risks.
+ 
+\end_layout
+
+\begin_layout Standard
+That risk emerge from a maniacal approach to the develop of some part of
+ the system.
+ 
+\end_layout
+
+\begin_layout Standard
+Also in that case the big variance in the schedule lead us to identify and
+ resolve that kind of risk.
+ 
+\end_layout
+
+\begin_layout Paragraph*
+Unrealistic budget
+\end_layout
+
+\begin_layout Standard
+\begin_inset space ~
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+That risk can emerges from an understimation of the whole cost of the project.
+ 
+\end_layout
+
+\begin_layout Standard
+As we have already mentioned, the estimation trough the COCOMO II and the
+ FPs approach has been done very carefully.
+ Furthermore, the bottom up approach used in order to develop the project
+ implicate that is very unlikely that a huge expense can happen without
+ any signs.
 \end_layout
 
 \begin_layout Standard
